# cli-contacts-bot

./: .dockerignore  Dockerfile  README.md  pyproject.toml
helper_bot/: main.py
helper_bot/src/contacts/: classes.py  work.py
helper_bot/src/notes/: note_book.py  notes_handler.py
helper_bot/src/ui/: ContactsUserInterface.py  HelpUserInterface.py  NoteBookUserInterface.py  UserInterface.py
